--- a/index.html
+++ b/index.html
@@ -103,11 +103,13 @@ p{
   margin-bottom:20px;
   border-radius:5px;
   box-shadow:0px 7px 10px #DDDDDD;
+  zz-index:0;
 }
 .cards:hover{
   transform:scale(1.05);
   box-shadow:0 0 10px 0.6px var(--tertiary-color);
   border:solid 1px
+  z-index:0;
 }
 .card-info{
   display:block;
