--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ p{
   margin-bottom:20px;
   border-radius:5px;
   box-shadow:0px 7px 10px #DDDDDD;
-  zz-index:0;
+  z-index:0;
 }
 .cards:hover{
   transform:scale(1.05);
