--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ header{
   position:fixed;
   top:0;
   left:0;
+  z-index:2;
 }
 #header-img{
   width:30px;
@@ -175,17 +176,20 @@ svg {
 }
 .card-titles{
   margin:20px 0 10px 0;
+  z-index:0;
 }
 h5 {
   font-size:2.5em;
   font-family:'Cormfortaa', sans-serif;
   margin:0 0 20px 0;
+  z-index:0;
 }
 span {
   padding:0;
   margin:0;
   position:relative;
   left:-30px;
+  z-index:0;
 }
 .card-buttons {
   display:block;
@@ -193,6 +197,7 @@ span {
   margin:30px auto;
   background-color:black;
   color:white;
+  z-index:0;
 }
 .card-buttons:hover{
   background-color:#333333;
